Bug 901987 - The RHS of a for-of loop is an assignment expression  r=jorendorff

--HG--
extra : amend_source : d18317a5d17ad1c4ba243fc4184a13baf69b1415